grammar.txt
<program> ::= <declaration>*EOF;
<declaration> ::= <variable>|<statement>;
<variable> ::= "VAR" IDENTIFIER ("=" <expression>)?";";
<statement> ::= <expression>|<output>;
<output> := "OUTPUT "<expression>;
<expression> ::= <literal>|<unary>|<binary>|<brackets>;
<literal> ::= INTEGER|STRING|BOOL|NONE;
<brackets> ::= "("<expression>")";
<unary> ::= ("-"|"!")<expression>;
<binary> ::= <expression><operator><expression>;
<operator> ::= "=="|"!="|"<"|"<="|">"|">="|"+"|"-"|"*"|"/";
<expression> ::= <equality>;
<equality> ::= <comparison>(("!="|"==")<comparison>)*;
<comparison> ::= <term>((">"|">="|"<"|"<=")<term>)*;
<term> ::= <factor>(("-"|"+")<factor>)*;
<factor> ::= <unary>(("/","*")<unary>)*;
<unary> ::= ("!"|"-")<unary>|<primary>;
<primary> ::= INTEGER|STRING|BOOL|NONE|"("expression")"|IDENTIFIER;
